Fix printer macros edit in gspl-xpq. Fix bug in search for printers. Make various tree view columns resizable.

--- a/src/hdrs/infiles.h.in
+++ b/src/hdrs/infiles.h.in
@@ -1,4 +1,4 @@
-/* files.h.in -- template for "files.h" built by configure
+/* infiles.h.in -- template for "files.h" built by configure
 
    Copyright 2008 Free Software Foundation, Inc.
 
