Mostly fix a number of typos in the manual pages Fix a bug with macro deletion in gspl-xpq Add double-click to edit macro. A few tidy-ups on spacing.

--- a/Userinst.in
+++ b/Userinst.in
@@ -35,7 +35,7 @@ $USERNAME = shift @ARGV;
 $SPOOLDIR = shift @ARGV;
 
 $USERNAME = "@SPOOLUSER@" unless $USERNAME;
-$SPOOLDIR = "/usr/local/var/spool/spd" unless $SPOOLDIR;
+$SPOOLDIR = "/usr/local/var/gnuspool" unless $SPOOLDIR;
 $UID = 50;
 
 exit 0 if getpwnam($USERNAME);
