Change version numbers on end to just major version.

--- a/src/hdrs/infiles.h.in
+++ b/src/hdrs/infiles.h.in
@@ -61,10 +61,10 @@ extern char 	*mkspid(const char *, const jobno_t);
 #define	LUMPSIZE	"${MSGTXSIZE-50}"
 #define	LUMPWAIT	"${MSGTXDELAY-2}"
 #define	CLOSEDELAY	"${TCPDELAY-1}"
-#define	SPUFILE		"${SPOOLDIR-@spooldir@}/spufile@PACKAGE_VERSION@"
-#define	SPUTMP		"${SPOOLDIR-@spooldir@}/sputmp@PACKAGE_VERSION@"
-#define	CHFILE		"${SPOOLDIR-@spooldir@}/spcharges@PACKAGE_VERSION@"
-#define	CHTMP		"${SPOOLDIR-@spooldir@}/spchtmp@PACKAGE_VERSION@"
+#define	SPUFILE		"${SPOOLDIR-@spooldir@}/spufile@MAJOR_PACKAGE_VERSION@"
+#define	SPUTMP		"${SPOOLDIR-@spooldir@}/sputmp@MAJOR_PACKAGE_VERSION@"
+#define	CHFILE		"${SPOOLDIR-@spooldir@}/spcharges@MAJOR_PACKAGE_VERSION@"
+#define	CHTMP		"${SPOOLDIR-@spooldir@}/spchtmp@MAJOR_PACKAGE_VERSION@"
 #define	SPDIR		"${SPOOLDIR-@spooldir@}"
 #define	PTDIR		"${SPOOLPT-@spoolpt@}"
 #define	IPROGDIR	"${SPROGDIR-@pkgexecdir@}"
@@ -94,7 +94,7 @@ extern char 	*mkspid(const char *, const jobno_t);
 #define	SPLPQPROG	"${SPROGDIR-@pkgexecdir@}/xtlpq"
 #define	SPLPRMPROG	"${SPROGDIR-@pkgexecdir@}/xtlprm"
 #define	ALTSPOOL	"${ALTSPOOL-@altspool@}"
-#define	DUMPPWFILE	"${SPOOLDIR-@spooldir@}/pwdump@PACKAGE_VERSION@"
+#define	DUMPPWFILE	"${SPOOLDIR-@spooldir@}/pwdump@MAJOR_PACKAGE_VERSION@"
 #define	GSHTMLINI	"${SDATADIR-@pkgdatadir@}/gshtml.ini"
 #define	HTML_UFILE	"${SDATADIR-@pkgdatadir@}/html_ufile"
 #define HTML_TMPFILE	"/tmp/gscgi%ld.%d"
