Add cupspy-setup program and revise conf files.

--- a/cupspy/cupspy.conf
+++ b/cupspy/cupspy.conf
@@ -17,13 +17,14 @@
 
 # Originally written by John Collins <jmc@xisl.com>.
 
-# Example parameters
+# This will get rewritten by cupspy-setup
 
-#PARAMS:
-#	LOGLEVEL=2		# 0 no logging 1 basic logging >1 lots of logging
-#	LOG=Grindle		# Log file
-#	CONFDIR=/etc/stuff	# Where conf stuff is kept default is where we read this file from
-#	PPDDIR=/etc/cups/ppd	# Where ppd files live
+PARAMS:
+
+# Parameters section
+
+PARAMS:
+	LOGLEVEL=2
 
 # Default values to answer questions with
 # Individual printer specs override
@@ -34,9 +35,12 @@ DEFAULTS:
 	Printer=Copier_A4
 
 	# Set copies, title, User name parameters for use with python % operator
+	Prefix=gspl-pr --verbose -s
 	Copies=-c %d
 	Title=-h %s
 	User=-U %s
+	GSPrinter=-P %s
+	Form=-f %s
 
 	# These are answers to questsions NOW and MAKELOCALURI etc have obvious meanings
 
@@ -129,21 +133,24 @@ DEFAULTS:
 # These are (virtual) printers
 
 Copier_A4:
-	Command=gspl-pr -f a4.ps -s -P copier --verbose
+	GSPrinter=copier
+	Form=a4.ps
 	media-supported IPP_TAG_KEYWORD A4
 	media-default IPP_TAG_KEYWORD A4
 	document-format-supported IPP_TAG_MIMETYPE application/postscript
 	printer-info IPP_TAG_TEXT "Copier used as printer"
 
 Copier_A4_double:
-	Command=gspl-pr -f a4.ps-dup -s -P copier --verbose
+	GSPrinter=copier
+	Form=a4.ps-dup
 	media-supported IPP_TAG_KEYWORD A4
 	media-default IPP_TAG_KEYWORD A4
 	document-format-supported IPP_TAG_MIMETYPE application/postscript
 	printer-info IPP_TAG_TEXT "Copier used as printer - double sided"
 
 Copier_bypass_tray:
-	Command=gspl-pr -f a4.lh -s -P copier --verbose
+	GSPrinter=copier
+	Form=a4.lh
 	media-supported IPP_TAG_KEYWORD A4
 	media-default IPP_TAG_KEYWORD A4
 	document-format-supported IPP_TAG_MIMETYPE application/postscript
