Changes mostly for Debian.

--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -36,8 +36,8 @@ LEXLIB		=	@LEXLIB@
 RM		=	rm -f
 PROGS		=	gspl-pmenu gspl-hostedit gspl-passwd
 BUILDPROGS	=	helpparse
-BINDIR		=	@bindir@
-SBINDIR		=	@sbindir@
+BINDIR		=	$(DESTDIR)@bindir@
+SBINDIR		=	$(DESTDIR)@sbindir@
 INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
 
