--- a/src/gtk/Makefile.in
+++ b/src/gtk/Makefile.in
@@ -25,13 +25,13 @@ BASE		=	../..
 HDRS		=	$(PARENT)/hdrs
 CC		=	@CC@
 CCFLAGS		=	-O @gcc_useful_options@ @funny_compiler_options@
+SHLIBCC		=	libtool --mode=link $(CC) $(CCFLAGS)
 LDFLAGS		=	
 GTKINCL		=	`pkg-config --cflags gtk+-2.0`
 CFLAGS		=	$(CCFLAGS) -I$(HDRS) -I$(BASE) $(GTKINCL)
-LIBDIR		=	@libdir@
 MYLIBDIR	=	$(PARENT)/lib
-LIB		=	$(MYLIBDIR)/libgnuspool_int.a
-SHLIB		=	$(MYLIBDIR)/libgnuspool_int.so
+LIB		=	$(MYLIBDIR)/.libs/libgnuspool_int.a
+SHLIB		=	$(MYLIBDIR)/libgnuspool_int.la
 LIBS		=	@LIBS@
 LIBNET		=	@SOCKLIBS@
 GTKLIBS		=	`pkg-config --libs gtk+-2.0`
@@ -40,9 +40,9 @@ INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
 SPOOLUSER	=	@SPOOLUSER@
 USERMODES	=	-o $(SPOOLUSER) -g root -m 4755
-BINDIR		=	@bindir@
-INTBINDIR	=	@pkgexecdir@
-HELPFILEDIR	=	@sphelpdir@
+BINDIR		=	$(DESTDIR)@bindir@
+INTBINDIR	=	$(DESTDIR)@pkgexecdir@
+SPHELPDIR	=	$(DESTDIR)@sphelpdir@
 USERBINS	=	gspl-xpq gspl-xuser
 SYSBINS		=	gtksave
 XRES		=	xspq.xpm xspq.menu xspqview.menu xspqsel.menu xspuser.xpm xspuser.menu
@@ -51,45 +51,29 @@ XSPUSEROBS=xspuser.o xspu_cbs.o gtk_lib.o
 XSPQOBS=xspq.o xsq_cbs.o xsq_jplist.o xsq_jcall.o xsq_pcall.o xsq_prompt.o xsq_view.o gtk_lib.o
 GTKSAVEOBS=gtksave.o
 
-all:		@main_target@
-
-nonshared:	gspl-xpq gspl-xuser gtksave
-
-shared:		xspq_s xspuser_s gtksave_s
+all:		gspl-xpq gspl-xuser gtksave
 
 gspl-xuser:	$(XSPUSEROBS)
-		$(CC) -o $@ $(LDFLAGS) $(XSPUSEROBS) $(LIB) $(GTKLIBS) $(LIBNET) $(LIBS)
+		$(SHLIBCC) -o $@ $(LDFLAGS) $(XSPUSEROBS) $(SHLIB) $(GTKLIBS) $(LIBNET) $(LIBS)
 
-xspuser_s:	$(XSPUSEROBS)
-		$(CC) -o gspl-xuser $(LDFLAGS) $(XSPUSEROBS) $(SHLIB) $(GTKLIBS) $(LIBNET) $(LIBS)
-		touch $@
-
-gspl-xpq:		$(XSPQOBS)
-		$(CC) -o $@ $(LDFLAGS) $(XSPQOBS) $(LIB) $(GTKLIBS) $(LIBNET) $(LIBS)
-
-xspq_s:		$(XSPQOBS)
-		$(CC) -o gspl-xpq $(LDFLAGS) $(XSPQOBS) $(SHLIB) $(GTKLIBS) $(LIBNET) $(LIBS)
-		touch $@
+gspl-xpq:	$(XSPQOBS)
+		$(SHLIBCC) -o $@ $(LDFLAGS) $(XSPQOBS) $(SHLIB) $(GTKLIBS) $(LIBNET) $(LIBS)
 
 gtksave:	$(GTKSAVEOBS)
 		$(CC) -o $@ $(LDFLAGS) $(GTKSAVEOBS) $(LIB) $(LIBS)
 
-gtksave_s:	$(GTKSAVEOBS)
-		$(CC) -o gtksave $(LDFLAGS) $(GTKSAVEOBS) $(SHLIB) $(LIBS)
-		touch $@
-
 install:	all
-		$(INSTALL) $(USERMODES) $(USERBINS) $(BINDIR)
-		$(INSTALL) $(SYSBINS) $(INTBINDIR)
-		$(INSTALL_DATA) $(XRES) $(HELPFILEDIR)
+		libtool --mode=install $(INSTALL) $(USERMODES) $(USERBINS) $(BINDIR)
+		libtool --mode=install $(INSTALL) $(SYSBINS) $(INTBINDIR)
+		$(INSTALL_DATA) $(XRES) $(SPHELPDIR)
 
 install-strip:	all
-		$(INSTALL) -s $(USERMODES) $(USERBINS) $(BINDIR)
-		$(INSTALL) -s $(SYSBINS) $(INTBINDIR)
-		$(INSTALL_DATA) $(XRES) $(HELPFILEDIR)
+		libtool --mode=install $(INSTALL) -s $(USERMODES) $(USERBINS) $(BINDIR)
+		libtool --mode=install $(INSTALL) -s $(SYSBINS) $(INTBINDIR)
+		$(INSTALL_DATA) $(XRES) $(SPHELPDIR)
 
 clean:
-	$(RM) *.o $(USERBINS) $(SYSBINS) *_s core.*
+	$(RM) *.o $(USERBINS) $(SYSBINS) core.*
 
 distclean:	clean
 	$(RM) Makefile
